# automint

./: .gitignore  Anchor.toml  Cargo.toml  README.md
minter_server_actix/: Cargo.toml
minter_server_actix/src/: main.rs  mint_token.rs
minter_server_actix/tests/: test_mint.rs
programs/minter_machine/: Cargo.toml
programs/minter_machine/src/: lib.rs
tests/: minter_machine.ts
